force-app/main/default/objects/aecm__Finance_Setting__mdt/aecm__Finance_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Finance Settings</label>
</CustomObject>