force-app/main/default/objects/aecm__Finance_Setting__mdt/fields/aecm__Current_Cash_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>aecm__Current_Cash_Discount_Rate__c</fullName>
    <label>Current Cash Discount Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>