force-app/main/default/objects/aecm__Finance_Setting__mdt/fields/aecm__Max_Number_of_ROI_Cycles__c.field-meta.xml
<CustomField>
    <fullName>aecm__Max_Number_of_ROI_Cycles__c</fullName>
    <label>Max # of ROI Cycles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>