force-app/main/default/objects/aecm__Finance_Setting__mdt/fields/aecm__Min_of_ROI_Cycles__c.field-meta.xml
<CustomField>
    <fullName>aecm__Min_of_ROI_Cycles__c</fullName>
    <label>Min # of ROI Cycles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>