force-app/main/default/objects/aecm__Finance_Setting__mdt/fields/aecm__valid_from__c.field-meta.xml
<CustomField>
    <fullName>aecm__valid_from__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>