force-app/main/default/objects/aecm__Finance_Setting__mdt/fields/aecm__Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>aecm__Valid_Until__c</fullName>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>